Fix assets url error

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <body>
     
 
-    <script src="assets/vendor-c9c2eb0af5a07f2f89bebbfc54002d23.js" integrity="sha256-FjORSJYp24OlHlCpy7TSAGDyVDYSRljH9eo+AKAG4vA= sha512-mfFaYcf+XJhGL3G3mk/vIQcrRZCZothEG91e4YYBZ3xcIa8FhA0v3IGvh+2d0PUd8j6nX8HpJsT9u3OpaWrR+Q==" ></script>
-    <script src="assets/dummy-4ef1ac45b2e2eb4a8f85d317760c604e.js" integrity="sha256-g/+cqgNNT5DZ5GVWZiNvcMBMtXlwzcW7l8EmP9pGE7g= sha512-L+3DkB8lyE06n6K3HKxndtFy5Fl2XNd5NJzh+bPFGejTO3BkraXJHcxsy/KpKHaIkJ8dmwbY/4bQ3nR+kj8MxA==" ></script>
+    <script src="assets/vendor-c9c2eb0af5a07f2f89bebbfc54002d23.js" ></script>
+    <script src="assets/dummy-4ef1ac45b2e2eb4a8f85d317760c604e.js" ></script>
 
     
   </body>
